--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -5,6 +5,7 @@ concurrency:
   cancel-in-progress: true
 
 on:
+  pull_request:
   workflow_dispatch:
   schedule:
     # At the end of every day
@@ -12,14 +13,14 @@ on:
 
 env:
   SHOREBIRD_TOKEN: ${{ secrets.SHOREBIRD_TOKEN }}
-  FLUTTER_VERSION: 3.24.1
+  FLUTTER_VERSION: 3.24.3
 
 jobs:
   patch:
     strategy:
       fail-fast: false
       matrix:
-        flutter-version: [3.24.1, 3.24.0, 3.22.3, 3.22.2, 3.19.6]
+        flutter-version: [3.24.3, 3.24.1, 3.24.0, 3.22.3, 3.22.2, 3.19.6]
 
     runs-on: ubuntu-latest
     timeout-minutes: 15
